fixed text align

--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,5 @@ h1 {
 
 #Header1 {
     font-size: 50px;
-    margin-right: True;
+    text-align: center;
 }
